--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,16 @@ export(r2mlm)
 export(r2mlm_comp)
 export(r2mlm_comp_manual)
 export(r2mlm_manual)
+import(nlme)
+importFrom(graphics,barplot)
+importFrom(graphics,legend)
+importFrom(lme4,VarCorr)
+importFrom(lme4,fixef)
+importFrom(lme4,fortify.merMod)
+importFrom(lme4,getME)
+importFrom(lme4,ranef)
+importFrom(magrittr,"%>%")
+importFrom(stats,formula)
+importFrom(stats,model.frame)
+importFrom(stats,terms)
+importFrom(stats,var)
