--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,9 @@ importFrom(lme4,getME)
 importFrom(lme4,ranef)
 importFrom(magrittr,"%>%")
 importFrom(nlme,asOneFormula)
+importFrom(rlang,":=")
 importFrom(stats,formula)
 importFrom(stats,model.frame)
 importFrom(stats,terms)
 importFrom(stats,var)
+importFrom(stringr,str_split_fixed)
