--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ importFrom(lme4,ranef)
 importFrom(magrittr,"%>%")
 importFrom(nlme,asOneFormula)
 importFrom(rlang,":=")
+importFrom(rlang,.data)
 importFrom(stats,formula)
 importFrom(stats,model.frame)
 importFrom(stats,terms)
