--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R: c(
     person("Jessica", "Flake", email = "jessica.flake@mcgill.ca", role = "aut"))
 Maintainer: Mairead Shaw <mairead.shaw@mail.mcgill.ca>
 Description: Generates both total- and level-specific R-squared measures from
-    Rights and Sterba’s (2019) framework of R-squared measures for multilevel
+    Rights and Sterba’s (2019) <doi:10.1037/met0000184> framework of R-squared measures for multilevel
     models with random intercepts and/or slopes, which is based on a completely
     full decomposition of variance. Additionally generates graphical 
     representations of these R-squared measures to allow visualizing and 
@@ -18,7 +18,7 @@ Description: Generates both total- and level-specific R-squared measures from
     multilevel models as special cases of 5 measures from the framework, and it
     also includes several newly-developed measures. Measures in the framework 
     can be used to compute R-squared differences when comparing multilevel 
-    models (following procedures in Rights & Sterba, 2020).
+    models (following procedures in Rights & Sterba (2020) <doi:10.1080/00273171.2019.1660605>).
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
