--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,7 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Imports: 
+    broom (>= 0.5.6),
     dplyr (>= 0.8.5),
     magrittr (>= 1.5),
     rlang (>= 0.4.6),
@@ -33,7 +34,7 @@ Depends:
     nlme (>= 3.1.14),
     R (>= 3.2.0)
 RoxygenNote: 7.1.0
-Suggests: 
+Suggests:
     testthat,
     Matrix
 URL: https://github.com/mkshaw/r2mlm
