Fixes issue #36, successful implementation of optional data input for r2mlm_comp. Adds documentation for helper functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(r2mlm)
 export(r2mlm_comp)
 export(r2mlm_comp_manual)
 export(r2mlm_manual)
+importFrom(broomExtra,augment)
 importFrom(graphics,barplot)
 importFrom(graphics,legend)
 importFrom(lme4,VarCorr)
@@ -17,6 +18,7 @@ importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(stats,formula)
 importFrom(stats,model.frame)
+importFrom(stats,na.omit)
 importFrom(stats,terms)
 importFrom(stats,var)
 importFrom(stringr,str_split_fixed)
