--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -6,5 +6,6 @@
 ^cran-comments\.md$
 ^CRAN-RELEASE$
 ^leo_test\.R$
+^fakedataplustestcases_r2mlmtutorial_12\.14\.20\.R$
 ^fakedataplustestcases_r2mlmtutorial_7\.27\.20\.R$
 ^tests$
