Updates simulated data.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ fakedataplustestcases_r2mlmtutorial_7.27.20.R
 tests/
 fakedataplustestcases_r2mlmtutorial_12.14.20.R
 CRAN-RELEASE
+fakedata_r2mlmtutorial_1.28.21.R
+examples.R
