--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -8,4 +8,6 @@
 ^leo_test\.R$
 ^fakedataplustestcases_r2mlmtutorial_12\.14\.20\.R$
 ^fakedataplustestcases_r2mlmtutorial_7\.27\.20\.R$
+^fakedata_r2mlmtutorial_1\.28\.21\.R$
 ^tests$
+^examples\.R$
