Adds documentation, rockchalk import for r2mlm_long_manual to use.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,7 @@ Imports:
     dplyr (>= 0.8.5),
     magrittr (>= 1.5),
     rlang (>= 0.4.6),
+    rockchalk (>= 1.8.144),
     stringr (>= 1.4.0),
     tidyselect (>= 1.0.0)
 Depends: 
