--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(magrittr,"%>%")
 importFrom(nlme,asOneFormula)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
+importFrom(rockchalk,gmc)
 importFrom(stats,formula)
 importFrom(stats,model.frame)
 importFrom(stats,na.omit)
