Adds example to r2mlm_long_manual documentation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(r2mlm)
 export(r2mlm3_manual)
 export(r2mlm_comp)
 export(r2mlm_comp_manual)
+export(r2mlm_long_manual)
 export(r2mlm_manual)
 importFrom(broomExtra,augment)
 importFrom(graphics,barplot)
