Adds methods import.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ LazyData: true
 Imports: 
     dplyr (>= 0.8.5),
     magrittr (>= 1.5),
+    methods (>= 3.6.3),
     rlang (>= 0.4.6),
     rockchalk (>= 1.8.144),
     stringr (>= 1.4.0),
