--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ importFrom(lme4,fortify.merMod)
 importFrom(lme4,getME)
 importFrom(lme4,ranef)
 importFrom(magrittr,"%>%")
+importFrom(methods,is)
 importFrom(nlme,asOneFormula)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
