Removes rockchalk dependency.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,11 @@ export(r2mlm_comp)
 export(r2mlm_comp_manual)
 export(r2mlm_long_manual)
 export(r2mlm_manual)
+importFrom(dplyr,bind_cols)
+importFrom(dplyr,group_by_at)
+importFrom(dplyr,mutate)
+importFrom(dplyr,sym)
+importFrom(dplyr,ungroup)
 importFrom(graphics,barplot)
 importFrom(graphics,legend)
 importFrom(lme4,VarCorr)
@@ -15,13 +20,15 @@ importFrom(lme4,getME)
 importFrom(lme4,ranef)
 importFrom(magrittr,"%>%")
 importFrom(methods,is)
+importFrom(misty,center)
 importFrom(nlme,asOneFormula)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
-importFrom(rockchalk,gmc)
+importFrom(stats,aggregate)
 importFrom(stats,formula)
 importFrom(stats,model.frame)
 importFrom(stats,na.omit)
+importFrom(stats,setNames)
 importFrom(stats,terms)
 importFrom(stats,var)
 importFrom(stringr,str_split_fixed)
