--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: r2mlm
 Type: Package
 Title: R-Squared Measures for Multilevel Models
-Version: 0.3.3
+Version: 0.3.4
 Authors@R: c(
     person("Mairead", "Shaw", email = "mairead.shaw@mail.mcgill.ca", role = c("aut", "cre")),
     person("Jason", "Rights", email = "jrights@psych.ubc.ca", role = "aut"),
@@ -26,15 +26,15 @@ Imports:
     dplyr (>= 0.8.5),
     magrittr (>= 1.5),
     methods (>= 3.6.3),
+    misty (>= 0.4.12),
     rlang (>= 0.4.6),
-    rockchalk (>= 1.8.144),
     stringr (>= 1.4.0),
     tidyselect (>= 1.0.0)
 Depends: 
     lme4 (>= 1.1.23),
     nlme (>= 3.1.14),
     R (>= 3.2.0)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.1
 Suggests:
     testthat,
     Matrix
