--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: r2mlm
 Type: Package
 Title: R-Squared Measures for Multilevel Models
-Version: 0.3.4
+Version: 0.3.5
 Authors@R: c(
     person("Mairead", "Shaw", email = "mairead.shaw@mail.mcgill.ca", role = c("aut", "cre")),
     person("Jason", "Rights", email = "jrights@psych.ubc.ca", role = "aut"),
@@ -26,8 +26,8 @@ Imports:
     dplyr (>= 0.8.5),
     magrittr (>= 1.5),
     methods (>= 3.6.3),
-    misty (>= 0.4.12),
     rlang (>= 0.4.6),
+    rockchalk (>= 1.8.157),
     stringr (>= 1.4.0),
     tidyselect (>= 1.0.0)
 Depends: 
