--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,6 @@ export(r2mlm_comp)
 export(r2mlm_comp_manual)
 export(r2mlm_long_manual)
 export(r2mlm_manual)
-importFrom(dplyr,bind_cols)
-importFrom(dplyr,group_by_at)
-importFrom(dplyr,mutate)
-importFrom(dplyr,sym)
-importFrom(dplyr,ungroup)
 importFrom(graphics,barplot)
 importFrom(graphics,legend)
 importFrom(lme4,VarCorr)
@@ -20,15 +15,13 @@ importFrom(lme4,getME)
 importFrom(lme4,ranef)
 importFrom(magrittr,"%>%")
 importFrom(methods,is)
-importFrom(misty,center)
 importFrom(nlme,asOneFormula)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
-importFrom(stats,aggregate)
+importFrom(rockchalk,gmc)
 importFrom(stats,formula)
 importFrom(stats,model.frame)
 importFrom(stats,na.omit)
-importFrom(stats,setNames)
 importFrom(stats,terms)
 importFrom(stats,var)
 importFrom(stringr,str_split_fixed)
