Adds confidence intervals using Lai's (2021) bootmlm.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: r2mlm
 Type: Package
 Title: R-Squared Measures for Multilevel Models
-Version: 0.3.5
+Version: 0.3.6
 Authors@R: c(
     person("Mairead", "Shaw", email = "mairead.shaw@mail.mcgill.ca", role = c("aut", "cre")),
     person("Jason", "Rights", email = "jrights@psych.ubc.ca", role = "aut"),
@@ -23,6 +23,7 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Imports: 
+    bootmlm (>= 0.0.1.1000),
     dplyr (>= 0.8.5),
     magrittr (>= 1.5),
     methods (>= 3.6.3),
