--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,12 @@
 
 export(r2mlm)
 export(r2mlm3_manual)
+export(r2mlm_ci)
 export(r2mlm_comp)
 export(r2mlm_comp_manual)
 export(r2mlm_long_manual)
 export(r2mlm_manual)
+importFrom(bootmlm,bootstrap_mer)
 importFrom(graphics,barplot)
 importFrom(graphics,legend)
 importFrom(lme4,VarCorr)
@@ -19,6 +21,7 @@ importFrom(nlme,asOneFormula)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rockchalk,gmc)
+importFrom(stats,confint)
 importFrom(stats,formula)
 importFrom(stats,model.frame)
 importFrom(stats,na.omit)
