--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: r2mlm
 Type: Package
 Title: R-Squared Measures for Multilevel Models
-Version: 0.3.6
+Version: 0.3.7
 Authors@R: c(
     person("Mairead", "Shaw", email = "mairead.shaw@mail.mcgill.ca", role = c("aut", "cre")),
     person("Jason", "Rights", email = "jrights@psych.ubc.ca", role = "aut"),
@@ -23,7 +23,6 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Imports: 
-    bootmlm (>= 0.0.1.1000),
     dplyr (>= 0.8.5),
     magrittr (>= 1.5),
     methods (>= 3.6.3),
@@ -37,6 +36,7 @@ Depends:
     R (>= 3.2.0)
 RoxygenNote: 7.2.1
 Suggests:
+    bootmlm,
     testthat,
     Matrix
 URL: https://github.com/mkshaw/r2mlm
