--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,5 +39,6 @@ Suggests:
     bootmlm,
     testthat,
     Matrix
+Additional_repositories: https://github.com/marklhc/bootmlm
 URL: https://github.com/mkshaw/r2mlm
 BugReports: https://github.com/mkshaw/r2mlm/issues
